# Citadel

./: Cargo.toml  README.md  config.json  defi.ipynb  package-lock.json  package.json
CrossChainBridgeIntegrations/: Cargo.toml
CrossChainBridgeIntegrations/NEAR-SandboxBridge/src/: bridge.rs  errors.rs  tests.rs
CrossChainBridgeIntegrations/src/: bridge.rs  lib.rs
EthereumContracts/: Cargo.toml  README.md
EthereumContracts/src/: bridge.rs  error.rs  errors.rs  lib.rs  mev_protection.rs  protocols.rs  types.rs  utils.rs  zk_proof.rs
EthereumContracts/src/tests/: integration_tests.rs  mock_provider.rs  mod.rs
NearContracts/: Cargo.toml
NearContracts/src/: ai_formatter.rs  analytics.rs  error.rs  lib.rs  monitoring.rs  oracle_adapter.rs  rebalancer.rs  test_vault_outputs.rs  tests.rs
OracleIntegrations/: Cargo.toml
OracleIntegrations/Chainlink-Sandbox/: Cargo.toml
OracleIntegrations/Chainlink-Sandbox/src/: alert_system.rs  fetch_apys.rs  fetch_prices.rs  lib.rs  tests.rs
OracleIntegrations/src/: lib.rs
SecurityAuditsAndTests/: Cargo.toml
SecurityAuditsAndTests/benches/: performance_benchmarks.rs
SecurityAuditsAndTests/src/: lib.rs
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
cli/src/commands/: bridge.rs  monitoring.rs  oracle.rs  vault.rs
