[workspace]
resolver = "2"
members = [
    "NearContracts",
    "CrossChainBridgeIntegrations",
    "OracleIntegrations",
    "EthereumContracts",
    "SecurityAuditsAndTests",
    "cli"
]

[workspace.dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
near-contract-standards = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
borsh = "0.9"
hex = "0.4"
sha2 = "0.10"
ethabi = "18.0"
web3 = "0.18"
colored = "2.0"
prettytable-rs = "0.10"
indicatif = "0.17"
futures = "0.3"
chrono = "0.4"
rand = "0.8"
num-traits = "0.2"
rust_decimal = "1.32"
statrs = "0.16"
rayon = "1.7"
dashmap = "5.4"
parking_lot = "0.12"
anyhow = "1.0"
ethers = { version = "2.0", features = ["ws", "rustls"] }
getrandom = "0.2"