[package]
name = "ethereum-contracts"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Ethereum contract integrations for the smart vault system"

[dependencies]
near-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
web3 = { workspace = true }
ethabi = { workspace = true }
rust_decimal = { workspace = true }
ethers = { version = "2.0", features = ["ws", "rustls"] }

[dev-dependencies]
anyhow = { workspace = true }
