[package]
name = "near-smart-vault"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A highly optimized smart vault implementation for NEAR Sandbox with AI-driven rebalancing."

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.8.1" }
near-contract-standards = "5.8.1"
borsh = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = true

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
debug-assertions = true