[package]
name = "security-audits"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Security audits and tests for the smart vault system"

[dependencies]
near-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5"

[[bench]]
name = "performance_benchmarks"
harness = false 