[package]
name = "vault-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Command line interface for the smart vault system"

[dependencies]
near-sdk = { workspace = true }
tokio = { version = "1.28", features = ["full", "sync", "time", "macros"] }
clap = { version = "4.3", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
indicatif = "0.17"
chrono = "0.4"
async-trait = { workspace = true }
web3 = { workspace = true }
ethabi = { workspace = true }
lazy_static = "1.4"
futures = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
rayon = "1.7"
colored = { workspace = true }
prettytable-rs = { workspace = true }
env_logger = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
parking_lot = "0.12"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0" 
