[package]
name = "near-oracle-integration"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Oracle integration for NEAR Smart Vault using Chainlink and mock data"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.8.1"
near-contract-standards = "5.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
anyhow = "1.0" 